<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:elevation="@dimen/elevation"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/txtNewStyleRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imgClose"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/titleAddRoom"
            android:textAppearance="@style/coo_yen_hoa" />

        <ImageButton
            android:id="@+id/imgClose"
            android:layout_width="@dimen/icon_h_w"
            android:layout_height="@dimen/icon_h_w"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/marginStartContext"
            android:background="@drawable/ic_close"
            android:layout_gravity="center_vertical"/>

    </androidx.cardview.widget.CardView>




    <TextView
        android:id="@+id/styleRoomBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:layout_marginTop="@dimen/marginDetailCoo2"
        android:text="@string/name"
        android:textAppearance="@style/about_space" />

    <EditText
        android:id="@+id/edtStyleRoom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/styleRoomBooking"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:layout_marginTop="@dimen/marginDetailCoo"
        android:layout_marginRight="@dimen/marginStartContext"
        android:background="@drawable/edt_background"
        android:hint="@string/name_ex"
        android:paddingStart="@dimen/login_activity_input_padding_left"
        android:paddingEnd="@dimen/login_activity_input_padding_right"
        android:scrollHorizontally="true"
        android:textAppearance="@style/address_coo" />

    <TextView
        android:id="@+id/txtAboutRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtStyleRoom"
        android:layout_alignLeft="@id/styleRoomBooking"
        android:layout_marginTop="@dimen/marginDetailCoo2"
        android:text="@string/about_room"
        android:textAppearance="@style/about_space" />

    <EditText
        android:id="@+id/edtAboutRoom"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_below="@id/txtAboutRoom"
        android:layout_alignLeft="@id/edtStyleRoom"
        android:layout_alignRight="@id/edtStyleRoom"
        android:layout_marginTop="@dimen/marginDetailCoo"
        android:background="@drawable/edt_background"
        android:gravity="top"
        android:hint="@string/about_room_ex"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/login_activity_input_padding_left"
        android:paddingEnd="@dimen/login_activity_input_padding_right"
        android:scrollHorizontally="true"
        android:textAppearance="@style/address_coo" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAboutRoom"
        android:layout_alignLeft="@id/styleRoomBooking"
        android:layout_marginTop="@dimen/marginDetailCoo2"
        android:text="@string/price_for_persion_hour"
        android:textAppearance="@style/about_space" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/txtPrice"
        android:layout_alignLeft="@id/edtStyleRoom"
        android:layout_marginTop="@dimen/marginDetailCoo"
        android:background="@drawable/edt_background"
        android:hint="@string/money"
        android:paddingStart="@dimen/login_activity_input_padding_left"
        android:paddingEnd="@dimen/login_activity_input_padding_right"
        android:scrollHorizontally="true"
        android:inputType="number"
        android:textAppearance="@style/address_coo" />

    <TextView
        android:id="@+id/txtMaxPer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAboutRoom"
        android:layout_alignLeft="@id/edtMaxPer"
        android:layout_alignTop="@id/txtPrice"
        android:text="@string/max_person"
        android:textAppearance="@style/about_space" />

    <EditText
        android:id="@+id/edtMaxPer"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/txtPrice"
        android:layout_alignTop="@id/edtPrice"
        android:layout_alignRight="@id/edtStyleRoom"
        android:background="@drawable/edt_background"
        android:hint="@string/max_ex"
        android:paddingStart="@dimen/login_activity_input_padding_left"
        android:paddingEnd="@dimen/login_activity_input_padding_right"
        android:scrollHorizontally="true"
        android:textAppearance="@style/address_coo"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnCreateStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/edtStyleRoom"
        android:layout_alignRight="@id/edtStyleRoom"
        android:layout_marginBottom="@dimen/marginDetailCoo"
        android:background="@drawable/button_normal"
        android:text="@string/add_style"
        android:textAppearance="@style/textNormal"
        android:textAllCaps="true"
        android:layout_below="@id/edtPrice"
        android:layout_marginTop="@dimen/marginDetailCoo2"/>


</RelativeLayout>