<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="250dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/customer_layout"
    android:layout_marginEnd="@dimen/marginStartContext">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sharedroom"
        android:layout_marginTop="@dimen/marginCustomerRoom"
        android:layout_marginStart="@dimen/marginCustomerRoom"
        android:id="@+id/iconShare"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSharedRoom"
        android:layout_below="@id/iconShare"
        android:textAppearance="@style/about_space"
        android:text="@string/shared_room"
        android:layout_alignLeft="@id/iconShare"
        android:layout_marginTop="@dimen/marginCustomerRoom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtYouWill"
        android:text="@string/you_will"
        style="@style/simply_dumm"
        android:layout_below="@id/txtSharedRoom"
        android:layout_alignLeft="@id/iconShare"
        android:layout_marginTop="@dimen/marginCustomerRoom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCost"
        android:text="@string/vnd_hour"
        style="@style/textCost"
        android:layout_below="@id/txtYouWill"
        android:layout_alignLeft="@id/iconShare"
        android:layout_marginTop="@dimen/marginCustomerRoom"
        android:layout_marginBottom="@dimen/marginDetailCoo"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMaxPersonRoom"
        android:layout_toEndOf="@id/txtSharedRoom"
        android:textAppearance="@style/address_coo"
        android:text="@string/max_person_room"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/marginStartContext"
        android:layout_alignTop="@id/txtSharedRoom"/>


</RelativeLayout>